Use g_boxed methods for GValue copying/freeing

Fixes memory management of GValue* return values.

http://bugzilla.gnome.org/show_bug.cgi?id=587369